# test-drive-fast-api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
fast_api/: .coverage  .dockerignore  Dockerfile  pyproject.toml  requirements.dev.txt  requirements.txt
fast_api/app/: config.py  db.py  main.py
fast_api/app/api/: crud.py  ping.py  summaries.http  summaries.py
fast_api/app/models/: pydantic.py  tortoise.py
fast_api/tests/: conftest.py  test_ping.py  test_summaries.py
