[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

# [tool.pytest.ini_options]
# pythonpath = [
#   ".", "app"
# ]

[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["James Best <james.best@breedr.co>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.70.1"
uvicorn = "0.16.0"
pydantic = "^1.9.1"
asyncpg = "0.25.0"
tortoise-orm = "0.17.8"
aerich = "0.6.1"
requests = "2.26.0"
gunicorn = "20.1.0"
pytest-cov = "3.0.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
